--- a/literature.bib
+++ b/literature.bib
@@ -1,48 +1,12 @@
 
-@misc{druskatStandardFormatCITATION2017,
-  title = {A Standard Format for {{CITATION}} Files},
-  copyright = {Creative Commons Attribution-NonCommercial 2.5 License (CC-BY-NC)},
-  journal = {Software and research},
-  url = {https://www.software.ac.uk/index.php/blog/2017-12-12-standard-format-citation-files},
-  author = {Druskat, Stephan and Bast, Radovan and Chue Hong, Neil and Konovalov, Alexander and Rowley, Andrew and Silva, Raniere},
-  month = dec,
-  year = {2017}
+@book{jonesCodeMetaExchangeSchema2017a,
+  title = {{{CodeMeta}}: An Exchange Schema for Software Metadata. {{Version}} 2.0},
+  url = {https://doi.org/10.5063/schema/codemeta-2.0},
+  author = {Jones, Matthew B. and Boettiger, Carl and Mayes, Abby Cabunoc and Smith, Arfon and Slaughter, Peter and Niemeyer, Kyle and Gil, Yolanda and Fenner, Martin and Nowak, Krzysztof and Hahnel, Mark and Coy, Luke and Allen, Alice and Crosas, Merc{\`e} and Sands, Ashley and Hong, Neil Chue and Cruse, Patricia and Katz, Dan and Goble, Carole},
+  year = {2017},
+  doi = {10.5063/schema/codemeta-2.0},
+  note = {Published: KNB Data Repository}
 }
-
-@inproceedings{druskatShouldCITATIONFiles2017,
-  address = {{Manchester, UK}},
-  title = {Should {{CITATION}} Files Be Standardized?},
-  copyright = {Creative Commons Attribution 4.0 International License (CC-BY)},
-  booktitle = {Proceedings of the {{Workshop}} on {{Sustainable Software}} for {{Science}}: {{Practice}} and {{Experiences}} ({{WSSSPE5}}.1)},
-  publisher = {{figshare}},
-  doi = {10.6084/m9.figshare.3827058.v4},
-  url = {https://doi.org/10.6084/m9.figshare.3827058.v4},
-  author = {Druskat, Stephan},
-  editor = {Chue Hong, Neil and Druskat, Stephan and Haines, Robert and Jay, Caroline and Katz, Daniel S. and Sufi, Shoaib},
-  month = sep,
-  year = {2017}
-}
-
-@article{blog,
-  title = {Software Citation Principles},
-  volume = {2},
-  issn = {2376-5992},
-  number = {e86},
-  journal = {PeerJ Computer Science},
-  doi = {10.7717/peerj-cs.86},
-  url = {https://doi.org/10.7717/peerj-cs.86},
-  author = {Smith, Arfon M. and Katz, Daniel S. and Niemeyer, Kyle E. and {FORCE11 Software Citation Working Group}},
-  year = {2016},
-  file = {/home/stephan/Zotero/storage/MIA8UJBQ/Smith et al. - 2016 - Software citation principles.pdf;/home/stephan/Zotero/storage/QPG7HCLB/cs-86.html}
-}
-
-@misc{slides,
-  title = {Encouraging Citation of Software -- Introducing {{CITATION}} Files},
-  url = {https://goo.gl/7gZuSY},
-  author = {Wilson, R.},
-  year = {2013}
-}
-
 
 @article{druskat_stephan_2018_1405679,
   title = {Citation {{File Format}} ({{CFF}})},
@@ -51,6 +15,49 @@
   author = {Druskat, Stephan and Spaaks, Jurriaan H. and Chue Hong, Neil and Haines, Robert and Baker, James},
   month = aug,
   year = {2018}
+}
+
+@misc{katzFAIRNotFair2017,
+  title = {{{FAIR}} Is Not Fair Enough},
+  abstract = {The FAIR data principles, defined as ``a set of guiding principles to make data Findable, Accessible, Interoperable, and Re-usable,'' came out of a meeting in Jan 2014 that ``brought together 25 high \ldots{}},
+  language = {en},
+  urldate = {2019-11-20},
+  journal = {Daniel S. Katz's blog},
+  url = {https://web.archive.org/web/20191120175321/https://danielskatzblog.wordpress.com/2017/06/22/fair-is-not-fair-enough/},
+  author = {Katz, Daniel S.},
+  month = jun,
+  year = {2017},
+  file = {/home/stephan/Zotero/storage/FICEYEPQ/fair-is-not-fair-enough.html}
+}
+
+@misc{daniels.katzFAIRNotFair2018,
+  type = {Technology},
+  title = {{{FAIR}} Is Not {{Fair Enough}}, {{Particularly}} for {{Software Citation}}, {{Availability}}, or {{Quality}}},
+  copyright = {License: CC Attribution License},
+  abstract = {a talk at the 2018 AGU Fall Meeting},
+  urldate = {2019-11-20},
+  url = {https://web.archive.org/web/20191120175542/https://www.slideshare.net/danielskatz/fair-is-not-fair-enough-particularly-for-software-citation-availability-or-quality?from_action=save},
+  author = {Daniel S. Katz},
+  collaborator = {Chue Hong, Neil},
+  year = {2018}
+}
+
+@article{lamprechtFAIRPrinciplesResearch2019,
+  title = {Towards {{FAIR}} Principles for Research Software},
+  volume = {Preprint},
+  issn = {2451-8484},
+  abstract = {The FAIR Guiding Principles, published in 2016, aim to improve the findability, accessibility, interoperability and reusability of digital research objects for both humans and machines. Until now the FAIR principles have been mostly applied to resear},
+  language = {en},
+  number = {Preprint},
+  urldate = {2019-11-20},
+  journal = {Data Science},
+  doi = {10.3233/DS-190026},
+  url = {https://doi.org/10.3233/DS-190026},
+  author = {Lamprecht, Anna-Lena and Garcia, Leyla and Kuzak, Mateusz and Martinez, Carlos and Arcila, Ricardo and Martin Del Pico, Eva and Dominguez Del Angel, Victoria and {van de Sandt}, Stephanie and Ison, Jon and Martinez, Paula Andrea and McQuilton, Peter and Valencia, Alfonso and Harrow, Jennifer and Psomopoulos, Fotis and Gelpi, Josep Ll and Chue Hong, Neil and Goble, Carole and {Capella-Gutierrez}, Salvador},
+  month = jan,
+  year = {2019},
+  pages = {1-23},
+  file = {/home/stephan/Zotero/storage/G3TJINVW/Lamprecht et al. - 2019 - Towards FAIR principles for&nbsp\;research&nbsp\;sof.pdf;/home/stephan/Zotero/storage/58N2FETG/ds190026.html}
 }
 
 
